--- a/react-portfolio-contentful/src/assets/styles/main.module.scss
+++ b/react-portfolio-contentful/src/assets/styles/main.module.scss
@@ -1,14 +1,12 @@
 @import './utils';
 @import './base';
 @import './layout';
-@import './_pages/home';
-@import './_pages/project';
-@import './_pages/project_list';
 @import './_components/navigation';
 @import './_components/header';
 @import './_components/footer';
 @import './_components/hero';
+@import './_components/download';
 @import './_components/topic';
+@import './_components/carousel';
 @import './_components/card';
-@import './_components/project_list';
 @import './helper';
