--- a/react-portfolio-contentful/src/assets/styles/_components/_header.scss
+++ b/react-portfolio-contentful/src/assets/styles/_components/_header.scss
@@ -6,7 +6,7 @@
 	height: 50px;
 	justify-content: space-between;
 	min-width: 360px;
-	padding: 0.35em 0.5em;
+	padding: 0.35em 0.5em 0.5em;
 	position: fixed;
 	top: 0;
 	width: 100%;
