--- a/react-portfolio-contentful/src/assets/styles/_components/_footer.scss
+++ b/react-portfolio-contentful/src/assets/styles/_components/_footer.scss
@@ -1,9 +1,9 @@
 .c_footer {
     align-items: center;
-    background: linear-gradient(0deg, #00001a, transparent);
+    // background: linear-gradient(0deg, #00000099 5%, #00000000 50%);
     gap: 2rem;
     justify-content: flex-end;
     margin-top: 6rem;
     min-width: 360px;
-    padding: 2em 0.5em;
+    padding: 2em 0.5em 4em;
 }
