--- a/react-portfolio-contentful/src/assets/styles/_components/_hero.scss
+++ b/react-portfolio-contentful/src/assets/styles/_components/_hero.scss
@@ -10,6 +10,7 @@
 	flex-direction: column;
 	justify-content: center;
 	max-width: 1200px;
+	z-index: 0;
 
 	img {
 		border-radius: 1rem;
@@ -23,6 +24,7 @@
 		text-align: left;
 		max-width: 960px;
 		width: 100%;
+		z-index: 1;
 
 		h1.hero_title {
 			font-size: 2rem;
