--- a/react-portfolio-contentful/src/assets/styles/_components/_hero.scss
+++ b/react-portfolio-contentful/src/assets/styles/_components/_hero.scss
@@ -1,9 +1,3 @@
-// [data-template='Landing Page']
-// [data-template='Landing Page Section']
-// [data-template='Project List Page']
-// [data-template='Project Detail Page']
-// [data-template='About Page']
-
 .c_hero {
 	align-items: center;
 	display: flex;
@@ -27,12 +21,12 @@
 		z-index: 1;
 
 		h1.hero_title {
-			font-size: 2rem;
+			font-size: 2.75rem;
 			line-height: 100%;
 			width: 100%;
 
-			@media screen and (min-width: 620px) {
-				font-size: 3rem;
+			@media screen and (min-width: $screen-sm) {
+				font-size: 3.75rem;
 			}
 		}
 
@@ -243,15 +237,16 @@
 
 		h2.hero_title {
 			align-self: center;
-			font-size: clamp(1rem, 10.5vw, 100px);
+			font-size: clamp(2.5rem, 10.5vw, 100px);
 			line-height: 0.9;
-			padding: 1rem 0;
+			padding: 0.5rem 0;
 			text-align: center;
 		}
 
 		.hero_subtitle {
-			font-size: clamp(1.25rem, 4.5vw, 24px);
+			font-size: clamp(1rem, 4.5vw, 20px);
 			font-weight: 300;
+			line-height: 1.2;
 			padding: 0 0.5rem;
 			text-align: center;
 			width: 100%;
@@ -262,6 +257,7 @@
 	&[data-template='Project Detail Page'],
 	&[data-template='About Page'] {
 		margin-top: 70px;
+		padding: 0 1.5rem;
 	}
 }
 
