--- a/react-portfolio-contentful/src/assets/styles/_components/_topic.scss
+++ b/react-portfolio-contentful/src/assets/styles/_components/_topic.scss
@@ -4,7 +4,7 @@
     flex-direction: column-reverse;
     gap: 0;
     max-width: 960px;
-    padding: 1rem 0;
+    padding: 1rem 0.5rem;
     width: 100%;
 
     @media screen and (min-width: $screen-sm) {
