--- a/react-portfolio-contentful/src/assets/styles/_components/_download.scss
+++ b/react-portfolio-contentful/src/assets/styles/_components/_download.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     margin: 3rem 0;
     max-width: 960px;
-    padding: 1rem 0.5rem;
+    padding: 1rem;
     width: 100%;
 }
 
