--- a/react-portfolio-contentful/src/assets/styles/_layout.scss
+++ b/react-portfolio-contentful/src/assets/styles/_layout.scss
@@ -1,7 +1,3 @@
-.c_body {
-    gap: 6rem;
-}
-
 .c_wrapper {
     background:
         linear-gradient(180deg, scale-color($brand-black, $alpha: -90%), scale-color($brand-black, $alpha: -50%)),
@@ -10,19 +6,36 @@
         $brand-black;
 }
 
-.c_main {
+.c_header,
+.c_wrapper,
+.c_main,
+.c_container,
+.c_hero,
+.c_title,
+.c_introduction,
+.c_body,
+.c_section,
+.c_footer {
     align-items: center;
     display: flex;
     flex-direction: column;
+    width: 100%;
+}
+
+.c_body {
+    padding: 1rem 1rem;
+}
+
+.c_main {
     max-width: 1200px;
     min-height: 100vh;
-    width: 100%;
 
     &[data-page-template='Landing Page'] {
         gap: 6rem;
 
         .c_body {
             gap: 4rem;
+            padding: 1rem 0.5rem;
 
             @media screen and (min-width: $screen-sm) {
                 gap: 6rem;
@@ -62,7 +75,7 @@
     &[data-page-template='Project Page'] {
         background: url(https://ucarecdn.com/a671c447-b0d0-4edc-bfab-0f2fcc593462/-/preview/1200x1200/) center -660px / 1200px
             no-repeat;
-        gap: 6rem;
+        gap: 3rem;
 
         .c_body {
             gap: 6rem;
