--- a/react-portfolio-contentful/src/assets/styles/_components/_hero.scss
+++ b/react-portfolio-contentful/src/assets/styles/_components/_hero.scss
@@ -14,6 +14,7 @@
 	.c_title {
 		gap: 0.25rem;
 		margin-top: 1rem;
+		overflow: hidden;
 		padding: 1rem 0.5rem;
 		text-align: left;
 		max-width: 960px;
@@ -64,9 +65,13 @@
 			display: flex;
 			flex-direction: row;
 			flex-wrap: wrap;
-			gap: 1rem;
+			gap: 0.5rem;
 			margin-top: 1rem;
 			width: 100%;
+
+			@media screen and (min-width: $screen-sm) {
+				gap: 1rem;
+			}
 		}
 
 		.page_tag__item {
